--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,18 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: | 
-        ls
-        docker build . -t trycodeinc/health:$(GITHUB_SHA)
-        docker push trycodeinc/health:$(GITHUB_SHA)
+# #     - name: Build the Docker image
+# #       run: | 
+# #         ls
+# #         docker build . -t trycodeinc/health:$(GITHUB_SHA)
+#         docker push trycodeinc/health:$(GITHUB_SHA)
+
+    -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: trycodeinc/health:$(GITHUB_SHA)
       
       
