--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.3'
 services:
 
   web:
+    image: trycodeinc/health:latest
     restart: always
     container_name: code
     command: ./wait-for-it.sh db:5432 -- ./docker-entrypoint.sh
     # python manage.py runserver 0.0.0.0:8000
-    build: .
     volumes:
       - .:/app
     ports:
