--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,12 @@ version: '3.3'
 services:
 
   web:
+    image: trycodeinc/health:v1.3
     restart: always
     container_name: code
     command: ./wait-for-it.sh db:5432 -- ./docker-entrypoint.sh
     # python manage.py runserver 0.0.0.0:8000
-    build: .
-    volumes:
-      - .:/app
+    # build: .
     ports:
       - 8000:8000
     # env_file:
