--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,32 +3,11 @@ version: '3.3'
 services:
 
   web:
-    image: trycodeinc/health:latest
     restart: always
     container_name: code
-    command: ./wait-for-it.sh db:5432 -- ./docker-entrypoint.sh
-    # python manage.py runserver 0.0.0.0:8000
+    command: ./docker-entrypoint.sh
+    build: .
+    volumes:
+      - .:/app
     ports:
       - 8000:8000
-    # env_file:
-    #   - ./.env.dev
-    depends_on:
-      - db
-    links:
-      - db:db
-
-  db:
-    image: postgres:13.0-alpine
-    container_name: postgresql
-    ports:
-      - 5432:5432
-
-    volumes:
-      - postgres_data:/var/lib/postgresql
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=12345
-      - POSTGRES_DB=health
-  
-volumes:
-  postgres_data:
